k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-app
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: richard0209/bookit-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
              name: gunicorn
          resources:
            requests:
              memory: "2Gi"
              cpu: "1750m"
            limits:
              memory: "3Gi"
              cpu: "2000m"
