k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: yatoute/bookit-frontend:latest
          resources:
            limits:
              memory: "200Mi"
              cpu: "300m"
          ports:
            - containerPort: 3000
